syntax = "proto3";
option go_package = "kuroko.com/goserver/object";
package object;

message ObjectRequest {
  string id = 1;
  string type = 2;
  string color = 3;
  float lat = 4;
  float lng = 5;
  string status = 6;
  optional int64 timestamp = 7;
}

message ObjectResponse {
    string ack = 1;
}
message HelloRequest {}
message HelloResponse {
    string message = 1;
}
service Object {
  rpc CreateObject( ObjectRequest) returns ( ObjectResponse);
  rpc Hello(HelloRequest) returns (HelloResponse);
}